--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is a header</h1>
     <p>This is a paragraph</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui maxime dolores minus veritatis repellendus magni exercitationem illum, dolorem deleniti consequuntur, deserunt, nesciunt ea doloremque vero dignissimos quam molestias error velit.</p>
 </body>
 </html>
