--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>This is a header</h1>
     <p>This is a paragraph</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui maxime dolores minus veritatis repellendus magni exercitationem illum, dolorem deleniti consequuntur, deserunt, nesciunt ea doloremque vero dignissimos quam molestias error velit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam obcaecati atque minima dolor minus similique.</p>
 </body>
 </html>
