--- a/conFusion/aboutus.html
+++ b/conFusion/aboutus.html
@@ -5,10 +5,62 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!-- files -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!-- styles -->
+    <style>
+        .row-header {
+            margin: 0px auto;
+            padding: 0px auto;
+        }
+
+        .row-content {
+            margin: 0px auto;
+            padding: 50px 0px 50px 0px;
+            border-bottom: 0px ridge #ffffff;
+            min-height: 400px;
+        }
+
+        .footer {
+            background-color: #D1C4E9;
+            margin:0px auto;
+            padding: 20px 0px 20px 0px;
+        }
+
+        .jumbotron {
+            padding: 70px 30px 70px 30px;
+            margin: 0px auto;
+            background: #9575CD;
+            color: floralwhite;
+        }
+
+        .address {
+            font-size:80%;
+            margin: 0px;
+            color: #0f0f0f;
+        }
+
+        body {
+            padding: 50px 0px 0px 0px;
+            z-index: 0;
+        }
+
+        .navbar-dark {
+            background-color: #512DA8;
+        }
+        .tab-content {
+            border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
+            padding: 10px;
+        }
+    </style>
     <title>Ristorante Con Fusion: About Us</title>
 </head>
 
@@ -99,29 +151,51 @@
         <div class="row row-content">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
-                <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-                <div class="d-none d-sm-block">
-                    <p>Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, 
-                        pioneering cross-cultural culinary connections.
-                    </p>
-                </div>
-                <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-                <div class="d-none d-sm-block">
-                    <p>Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, 
-                        <em>Everything that runs, wins, and everything that stays, pays!</em>
-                    </p>
-                </div>
-                <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-                <div class="d-none d-sm-block">
-                    <p>Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto,
-                         <em>You click only if you survive my lick.</em>
-                    </p>
-                </div>
-                <h3>Alberto Somayya <small>Executive Chef</small></h3>
-                <div class="d-none d-sm-block">
-                    <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, 
-                        <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em>
-                    </p>
+
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="#peter"
+                        role="tab" data-toggle="tab">Peter Pan, CEO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#danny" role="tab"
+                        data-toggle="tab">Danny Witherspoon, CFO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#agumbe"role="tab"
+                        data-toggle="tab">Agumbe Tang, CTO</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#alberto" role="tab"
+                        data-toggle="tab">Alberto Somayya, Exec. Chef</a>
+                    </li>
+                </ul>
+
+                <div class="tab-content">
+
+                    <div role="tabpanel" class="tab-pane fade show active" id="peter">
+                        <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
+                        <p> Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, 
+                            pioneering cross-cultural culinary connections. </p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="danny">
+                        <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
+                        <p>Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, 
+                            <em>Everything that runs, wins, and everything that stays, pays!</em>
+                        </p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="agumbe">
+                        <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
+                        <p>Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto,
+                            <em>You click only if you survive my lick.</em>
+                       </p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="alberto">
+                        <h3>Alberto Somayya <small>Executive Chef</small></h3>
+                        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, 
+                            <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -170,8 +244,6 @@
        </div>
    </div>
 
-    </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -213,9 +285,14 @@
            </div>
         </div>
     </footer>
+    <!-- files -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.0.slim.js" integrity="sha256-sCexhaKpAfuqulKjtSY7V9H7QT0TCN90H+Y5NlmqOUE=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
