--- a/conFusion/contactus.html
+++ b/conFusion/contactus.html
@@ -2,18 +2,61 @@
 <html lang="en">
 
 <head>
-
-    <title>Ristorante Con Fusion: About Us</title>
-    <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <!-- Bootstrap CSS -->
+    <!-- files -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!-- styles -->
+    <style>
+        .row-header {
+            margin: 0px auto;
+            padding: 0px auto;
+        }
+
+        .row-content {
+            margin: 0px auto;
+            padding: 50px 0px 50px 0px;
+            border-bottom: 0px ridge #ffffff;
+            min-height: 400px;
+        }
+
+        .footer {
+            background-color: #D1C4E9;
+            margin:0px auto;
+            padding: 20px 0px 20px 0px;
+        }
+
+        .jumbotron {
+            padding: 70px 30px 70px 30px;
+            margin: 0px auto;
+            background: #9575CD;
+            color: floralwhite;
+        }
+
+        .address {
+            font-size:80%;
+            margin: 0px;
+            color: #0f0f0f;
+        }
+
+        body {
+            padding: 50px 0px 0px 0px;
+            z-index: 0;
+        }
+
+        .navbar-dark {
+            background-color: #512DA8;
+        }
+    </style>
+
+    <title>Ristorante Con Fusion: About Us</title>
 </head>
 
 <body>
@@ -198,10 +241,14 @@
            </div>
         </div>
     </footer>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- files -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.0.slim.js" integrity="sha256-sCexhaKpAfuqulKjtSY7V9H7QT0TCN90H+Y5NlmqOUE=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
