--- a/conFusion/index.html
+++ b/conFusion/index.html
@@ -2,32 +2,81 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <!-- Bootstrap CSS -->
+    <!-- files -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/styles.css" rel="stylesheet">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!-- styles -->
+    <style>
+        .row-header {
+            margin: 0px auto;
+            padding: 0px auto;
+        }
+
+        .row-content {
+            margin: 0px auto;
+            padding: 50px 0px 50px 0px;
+            border-bottom: 0px ridge #ffffff;
+            min-height: 400px;
+        }
+
+        .footer {
+            background-color: #D1C4E9;
+            margin:0px auto;
+            padding: 20px 0px 20px 0px;
+        }
+
+        .jumbotron {
+            padding: 70px 30px 70px 30px;
+            margin: 0px auto;
+            background: #9575CD;
+            color: floralwhite;
+        }
+
+        .address {
+            font-size:80%;
+            margin: 0px;
+            color: #0f0f0f;
+        }
+
+        body {
+            padding: 50px 0px 0px 0px;
+            z-index: 0;
+        }
+
+        .navbar-dark {
+            background-color: #512DA8;
+        }
+    </style>
+
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="./img/logo.png" height="30" width="41"></a>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-                </ul>
+            <div class="row d-flex justify-content-start">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div>
+                    <a class="navbar-brand" href="#"><img src="./img/logo.png" height="30" width="41"></a>
+                </div>
+                <div class="collapse navbar-collapse ml-2" id="Navbar">
+                    <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -38,8 +87,15 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="./img/logo.png" class="img-fluid">
+                <div class="col-12 col-sm-6 align-self-center">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <img src="./img/logo.png" class="img-fluid">
+                        </div>
+                        <div class="col-sm-6">
+                            <a href="#reserve" class="btn btn-warning btn-lg" role="button" aria-pressed="true" style="width:17rem ;">Reserve Table</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -48,47 +104,47 @@
     <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
+                <h3 class="font-weight-bold">Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col-12 col-sm order-sm-first col-md">
                 <div class="media">
                     <img alt="uthappizza" src="./img/uthappizza.png" class="d-flex mr-3 img-thumbnail align-self-center">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                        <h2 class="mt-0 font-weight-bold">Uthappizza <span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary ml-2">$4.99</span></h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>This Month's Promotions</h3>
+            <div class="col-12 col-sm-4 col-md-3">
+                <h3 class="font-weight-bold">This Month's Promotions</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col col-sm col-md">
                 <div class="media">
-                    <img alt="buffet" src="./img/buffet.png" class="d-flex mr-3 img-thumbnail align-self-center">
                     <div class="media-body">
-                        <h2>Weekend Grand Buffet</h2>
-                        <p>Featuring mouthwatering combinations with a choice of five 
+                        <h2 class="font-weight-bold">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five 
                             different salads, six enticing appetizers, six main entrees and
                             five choicest desserts. Free flowing bubbly and soft drinks. All for 
                             just $19.99 per person
                         </p>
                     </div>
+                    <img alt="buffet" src="./img/buffet.png" class="d-flex mr-3 img-thumbnail align-self-center">
                 </div>
             </div>
         </div>
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
+                <h3 class="font-weight-bold">Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
                     <img alt="alberto" src="./img/alberto.png" class="d-flex mr-3 img-thumbnail align-self-center">
                     <div class="media-body">
-                        <h2>Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p>Award winning three-star Michelin chef with wide International experience having
+                        <h2 class="font-weight-bold">Alberto Somayya</h2>
+                        <h4 class="font-weight-bold">Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having
                             worked closely with whos-who in the culinary world, he specializes in creating mouthwatering 
                             Indo-Italian fusion experiences. 
                         </p>
@@ -96,8 +152,71 @@
                 </div>
             </div>
         </div>
+        <div class="row" id="reserve"></div>
+            <div class="col-12 col-sm-8 offset-sm-2 mb-5">
+                <div class="card">
+                    <div class="card-header bg-warning text-white font-weight-bold h4">
+                        Reserve a Table
+                    </div>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="row">
+                                <div class="col-md-3 col-lg-2">
+                                    <p >Number of Guests</p>
+                                </div>
+                                <div class="col-md-9 col-lg-10">
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline1">1</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline2" name="customRadioInline2" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline2">2</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline3" name="customRadioInline3" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline3">3</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline4" name="customRadioInline4" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline4">4</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline5" name="customRadioInline5" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline5">5</label>
+                                    </div>
+                                    <div class="custom-control custom-radio custom-control-inline">
+                                        <input type="radio" id="customRadioInline6" name="customRadioInline6" class="custom-control-input">
+                                        <label class="custom-control-label" for="customRadioInline6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-4 mt-md-1">
+                                <div class="col-md-3 col-lg-2">
+                                    <p>Date and Time</p>
+                                </div>
+                                <div class="col-md-9 col-lg-10">
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                          <input type="text" class="form-control" placeholder="Date" style="width:10rem;">
+                                        </div>
+                                        <div class="col-md-4">
+                                          <input type="text" class="form-control" placeholder="Time" style="width:10rem;">
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-9 offset-md-3 col-lg-10 offset-lg-2 mt-2">
+                                    <button type="submit" class="btn btn-primary my-1">Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -139,10 +258,14 @@
            </div>
         </div>
     </footer>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- files -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.0.slim.js" integrity="sha256-sCexhaKpAfuqulKjtSY7V9H7QT0TCN90H+Y5NlmqOUE=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
